--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/BryanMtz2483/Proyecto-Recursos-Humanos-API#readme",
   "dependencies": {
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.7"
